# logger

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  example.log.0  example.log.1  logger.cmake  package.json
examples/: example.c  example_console_logger.c  example_crafted_logger.c  example_file_logger.c  example_memory_file_logger.c  example_rotating_file_logger.c  example_stderr_logger.c  example_stdout_logger.c
src/: logger.c  logger.h  logger_builtin_formatters.c  logger_builtin_formatters.h  logger_builtin_handlers.c  logger_builtin_handlers.h  logger_builtin_loggers.c  logger_builtin_loggers.h  logger_err.c  logger_err.h  logger_formatter.c  logger_formatter.h  logger_formatters.c  logger_formatters.c.old  logger_formatters.h.old  logger_handler.c  logger_handler.h  logger_handlers.c  logger_handlers.c.old  logger_handlers.h  logger_handlers.h.old  logger_level.c  logger_level.h  logger_record.c  logger_record.h  logger_stream.h  logger_string.c  logger_string.h
test/: test_logger.c  test_logger_buffer.c  test_logger_formatter.c  test_logger_handler.c  test_logger_level.c  test_logger_logger.c  test_logger_message.c  test_logger_record.c  test_logger_string.c
